# Digibyte-Adaptive-Core

./: CONTRIBUTING.md  INDEX.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/reports/: Full-Scale Attack Simulation (v2)
docs/reports/v2/: AdaptiveCore_CodeBlueprint_v2.md  AdaptiveCore_TechSpec_v2.md  AdaptiveCore_Whitepaper_v2.md  README.md
docs/reports/v3/: ADAPTIVE_CORE_V3_DIAGRAMS.md  ARCHITECTURE_OVERVIEW.md  AUTHORITY_BOUNDARIES.md  CONFIDENCE_MODEL.md  CONTRACT.md  DRIFT_RADAR.md  GUARDRAILS_ARCHANGEL_MICHAEL.md  INDEX.md  NODE_SUMMARY.md  PIPELINE_USAGE.md  README.md  REASON_IDS.md
src/adaptive_core/: confidence_weights_v3.json  engine.py  memory.py  memory_writer.py  models.py  report_models.py  threat_memory.py
src/adaptive_core/v3/: __init__.py  analyze.py  canonicalize.py  drift.py  envelope.py  events.py  evidence_store.py  findings.py  graph.py  node_summary.py  pipeline.py  report_builder.py
src/adaptive_core/v3/guardrails/: __init__.py  amg_guardrails_v1.json  registry.py
tests/: test_immune_report.py  test_memory_writer.py  test_threat_memory.py  test_threat_memory_limits.py  test_v2_invalid_timestamp_accounting.py  test_v2_threat_memory_no_disk_default.py  test_v3_canonicalize.py  test_v3_canonicalize_and_hash.py  test_v3_correlation.py  test_v3_drift_radar.py  test_v3_envelope.py  test_v3_evidence_store.py  test_v3_guardrails_and_reports.py  test_v3_no_time_leakage.py  test_v3_node_summary.py  test_v3_pipeline_with_correlation.py  test_v3_replay_determinism.py
